2012-10-25  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_reporting.php,
	  include/functions_netflow.php,
	  include/functions.php,
	  include/functions_reports.php,
	  operation/reporting/reporting_xml.php,
	  godmode/reporting/reporting_builder.php,
	  godmode/reporting/reporting_builder.item_editor.php: Integrated
	  netflow reports into custom reports.

2012-10-25 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_extensions.php, extensions/pandora_logs.php,
	extensions/update_manager.php, extensions/resource_registration.php,
	extensions/resource_exportation.php, extensions/module_groups.php,
	extensions/plugin_registration.php, extensions/snmp_explorer.php,
	extensions/system_info.php, operation/menu.php: cleaned source code
	style.
	
	* include/functions_menu.php: fixed the hidden icons the extensions
	in  menu.
	
	Fixes: #3568966

2012-10-25  Vanessa Gil <vanessa.gil@artica.es>

	* include/functions_reporting.php
	  include/functions_report.php
	  operation/reporting/reporting_xml.php
	  operation/reporting/reporting_viewer.php
	  godmode/reporting/reporting_builder.item_editor.php
	  godmode/reporting/reporting_builder.php: Changed XML reports
	and added two new types of report.

2012-10-25 Miguel de Dios <miguel.dedios@artica.es>
	
	* pandoradb_data.sql: fixed the lost fields in the table "tgrupo"
	when install.
	 
	* install.php: fixed the installation on DBs with names as for
	example "name1.name2".
	
	Fixes: #3573766

2012-10-25  Sergio Martin <sergio.martin@artica.es>

	* include/functions_visual_map.php
	operation/visual_console/render_view.php
	operation/gis_maps/render_view.php
	operation/search_maps.php: Fixed some ACL Enterprise bugs
	merged from 4.0.2

2012-10-25 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_networkmap.php: updated the links and tooltips
	for the nodes in the networkmap on metaconsole.

2012-10-25 Miguel de Dios <miguel.dedios@artica.es>
	